--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@
             color: white;
         }
         th.valor, th.variacao {
-            background-color: #FFD700;
+            background-color: #FFD700; /* Fundo amarelo */
             color: black;
         }
-        th.variacao {
-            width: 20%;
+        th.variacao, td.variacao {
+            border: 1px solid white; /* Borda branca no tema claro */
+        }
+        .theme-dark th.variacao, .theme-dark td.variacao {
+            border-color: black; /* Borda preta no tema escuro */
         }
         td.moeda {
             background-color: #0057B7;
@@ -139,10 +142,12 @@
             try {
                 const res = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=usd,bitcoin,ethereum,litecoin,monero&vs_currencies=brl&include_24hr_change=true');
                 const data = await res.json();
-                atualizarCotacao('usd', data.usd.brl, data.usd.brl_24h_change);
+
+                // Atualiza cada moeda individualmente
+                atualizarCotacao('usd', data.usd.brl, data.usd.brl_24h_change, true);
                 atualizarCotacao('btc', data.bitcoin.brl, data.bitcoin.brl_24h_change);
                 atualizarCotacao('eth', data.ethereum.brl, data.ethereum.brl_24h_change);
-                atualizarCotacao('ltc', data.litecoin.brl, data.litecoin.brl_24h_change);
+                atualizarCotacao('ltc', data.litecoin.brl, data.litecoin.brl_24h_change, true);
                 atualizarCotacao('xmr', data.monero.brl, data.monero.brl_24h_change);
             } catch (error) {
                 console.error('Erro ao buscar cotações:', error);
@@ -150,36 +155,53 @@
             }
         }
 
-        function atualizarCotacao(moeda, valor, variacao) {
+        function atualizarCotacao(moeda, valor, variacao, formatarSimples = false) {
             const valorElement = document.getElementById(moeda);
             const variacaoElement = document.getElementById(`${moeda}-var`);
-            valorElement.innerText = `R$ ${valor.toFixed(2)}`;
+
+            // Formatação de valores com ponto como separador
+            const valorFormatado = formatarSimples
+                ? `R$${valor.toFixed(2).replace('.', ',')}`
+                : `R$${valor.toLocaleString('pt-BR', { minimumFractionDigits: 0 }).replace(/\./g, '.')}`;
+
+            valorElement.innerText = valorFormatado;
+
+            // Atualiza a variação (positiva ou negativa)
             variacaoElement.innerText = variacao >= 0
                 ? `▲ +${variacao.toFixed(2)}%`
                 : `▼ ${variacao.toFixed(2)}%`;
+
+            // Define a cor da variação
             variacaoElement.className = variacao >= 0
-                ? 'variacao-positiva'
-                : 'variacao-negativa';
+                ? 'variacao variacao-positiva'
+                : 'variacao variacao-negativa';
         }
 
         function atualizarDataHora() {
             const agora = new Date();
+
+            // Data e hora no Brasil
             document.getElementById('data-brasil').innerText = agora.toLocaleDateString('pt-BR');
             document.getElementById('hora-brasil').innerText = agora.toLocaleTimeString('pt-BR', { hour: '2-digit', minute: '2-digit' });
+
+            // Data e hora na Ucrânia
             const optionsUcrania = { timeZone: 'Europe/Kiev', hour: '2-digit', minute: '2-digit' };
             document.getElementById('data-ucrania').innerText = agora.toLocaleDateString('pt-BR', { timeZone: 'Europe/Kiev' });
             document.getElementById('hora-ucrania').innerText = agora.toLocaleTimeString('pt-BR', optionsUcrania);
         }
 
+        // Alterna entre temas claro e escuro
         document.getElementById('themeToggle').addEventListener('click', () => {
-            document.body.classList.toggle('theme-light');
-            document.body.classList.toggle('theme-dark');
+            const body = document.body;
+            body.classList.toggle('theme-light');
+            body.classList.toggle('theme-dark');
         });
 
+        // Inicializa as funções
         fetchCotacoes();
         atualizarDataHora();
-        setInterval(fetchCotacoes, 60000);
-        setInterval(atualizarDataHora, 1000);
+        setInterval(fetchCotacoes, 60000); // Atualiza as cotações a cada 60 segundos
+        setInterval(atualizarDataHora, 1000); // Atualiza data e hora a cada segundo
     </script>
 </body>
 </html>
