--- a/index.html
+++ b/index.html
@@ -23,30 +23,19 @@
         th, td {
             padding: 8px;
             text-align: left;
-            border: 0.5px solid white;
+            border: 1px solid white;
             transition: border-color 0.3s;
         }
         th.moeda {
             background-color: #0057B7;
             color: white;
         }
-        th.valor, th.variacao {
+        th.valor, th.variacao, td.valor {
             background-color: #FFD700; /* Fundo amarelo */
             color: black;
         }
-        th.variacao, td.variacao {
-            border: 1px solid white; /* Borda branca no tema claro */
-        }
-        .theme-dark th.variacao, .theme-dark td.variacao {
-            border-color: black; /* Borda preta no tema escuro */
-        }
-        td.moeda {
-            background-color: #0057B7;
-            color: white;
-        }
-        td.valor {
-            background-color: #FFD700;
-            color: black;
+        td.variacao {
+            border: 1px solid white; /* Borda fixa branca */
         }
         td.variacao-positiva {
             color: green;
@@ -55,6 +44,12 @@
         td.variacao-negativa {
             color: red;
             font-weight: bold;
+        }
+        .theme-light th, .theme-light td {
+            border-color: black; /* Borda preta no tema claro */
+        }
+        .theme-dark th, .theme-dark td {
+            border-color: white; /* Borda branca no tema escuro */
         }
         .theme-light {
             background-color: #FFFFFF;
@@ -138,70 +133,64 @@
     </div>
     <button class="theme-toggle" id="themeToggle">🌙</button>
     <script>
-        async function fetchCotacoes() {
-            try {
-                const res = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=usd,bitcoin,ethereum,litecoin,monero&vs_currencies=brl&include_24hr_change=true');
-                const data = await res.json();
+        (async function () {
+            async function fetchCotacoes() {
+                try {
+                    const res = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=usd,bitcoin,ethereum,litecoin,monero&vs_currencies=brl&include_24hr_change=true');
+                    const data = await res.json();
 
-                // Atualiza cada moeda individualmente
-                atualizarCotacao('usd', data.usd.brl, data.usd.brl_24h_change, true);
-                atualizarCotacao('btc', data.bitcoin.brl, data.bitcoin.brl_24h_change);
-                atualizarCotacao('eth', data.ethereum.brl, data.ethereum.brl_24h_change);
-                atualizarCotacao('ltc', data.litecoin.brl, data.litecoin.brl_24h_change, true);
-                atualizarCotacao('xmr', data.monero.brl, data.monero.brl_24h_change);
-            } catch (error) {
-                console.error('Erro ao buscar cotações:', error);
-                document.querySelectorAll('td[id]').forEach(td => td.innerText = 'Erro');
+                    atualizarCotacao('usd', data.usd.brl, data.usd.brl_24h_change, true);
+                    atualizarCotacao('btc', data.bitcoin.brl, data.bitcoin.brl_24h_change);
+                    atualizarCotacao('eth', data.ethereum.brl, data.ethereum.brl_24h_change);
+                    atualizarCotacao('ltc', data.litecoin.brl, data.litecoin.brl_24h_change, true);
+                    atualizarCotacao('xmr', data.monero.brl, data.monero.brl_24h_change);
+                } catch (error) {
+                    console.error('Erro ao buscar cotações:', error);
+                    document.querySelectorAll('td[id]').forEach(td => td.innerText = 'Erro');
+                }
             }
-        }
 
-        function atualizarCotacao(moeda, valor, variacao, formatarSimples = false) {
-            const valorElement = document.getElementById(moeda);
-            const variacaoElement = document.getElementById(`${moeda}-var`);
+            function atualizarCotacao(moeda, valor, variacao, formatarSimples = false) {
+                const valorElement = document.getElementById(moeda);
+                const variacaoElement = document.getElementById(`${moeda}-var`);
 
-            // Formatação de valores com ponto como separador
-            const valorFormatado = formatarSimples
-                ? `R$${valor.toFixed(2).replace('.', ',')}`
-                : `R$${valor.toLocaleString('pt-BR', { minimumFractionDigits: 0 }).replace(/\./g, '.')}`;
+                const valorFormatado = formatarSimples
+                    ? `R$${valor.toFixed(2).replace('.', ',')}`
+                    : `R$${valor.toLocaleString('pt-BR', { minimumFractionDigits: 0 }).replace(/\./g, '.')}`;
 
-            valorElement.innerText = valorFormatado;
+                valorElement.innerText = valorFormatado;
 
-            // Atualiza a variação (positiva ou negativa)
-            variacaoElement.innerText = variacao >= 0
-                ? `▲ +${variacao.toFixed(2)}%`
-                : `▼ ${variacao.toFixed(2)}%`;
+                variacaoElement.innerText = variacao >= 0
+                    ? `▲ +${variacao.toFixed(2)}%`
+                    : `▼ ${variacao.toFixed(2)}%`;
 
-            // Define a cor da variação
-            variacaoElement.className = variacao >= 0
-                ? 'variacao variacao-positiva'
-                : 'variacao variacao-negativa';
-        }
+                variacaoElement.className = variacao >= 0
+                    ? 'variacao variacao-positiva'
+                    : 'variacao variacao-negativa';
+            }
 
-        function atualizarDataHora() {
-            const agora = new Date();
+            function atualizarDataHora() {
+                const agora = new Date();
 
-            // Data e hora no Brasil
-            document.getElementById('data-brasil').innerText = agora.toLocaleDateString('pt-BR');
-            document.getElementById('hora-brasil').innerText = agora.toLocaleTimeString('pt-BR', { hour: '2-digit', minute: '2-digit' });
+                document.getElementById('data-brasil').innerText = agora.toLocaleDateString('pt-BR');
+                document.getElementById('hora-brasil').innerText = agora.toLocaleTimeString('pt-BR', { hour: '2-digit', minute: '2-digit' });
 
-            // Data e hora na Ucrânia
-            const optionsUcrania = { timeZone: 'Europe/Kiev', hour: '2-digit', minute: '2-digit' };
-            document.getElementById('data-ucrania').innerText = agora.toLocaleDateString('pt-BR', { timeZone: 'Europe/Kiev' });
-            document.getElementById('hora-ucrania').innerText = agora.toLocaleTimeString('pt-BR', optionsUcrania);
-        }
+                const optionsUcrania = { timeZone: 'Europe/Kiev', hour: '2-digit', minute: '2-digit' };
+                document.getElementById('data-ucrania').innerText = agora.toLocaleDateString('pt-BR', { timeZone: 'Europe/Kiev' });
+                document.getElementById('hora-ucrania').innerText = agora.toLocaleTimeString('pt-BR', optionsUcrania);
+            }
 
-        // Alterna entre temas claro e escuro
-        document.getElementById('themeToggle').addEventListener('click', () => {
-            const body = document.body;
-            body.classList.toggle('theme-light');
-            body.classList.toggle('theme-dark');
-        });
+            document.getElementById('themeToggle').addEventListener('click', () => {
+                const body = document.body;
+                body.classList.toggle('theme-light');
+                body.classList.toggle('theme-dark');
+            });
 
-        // Inicializa as funções
-        fetchCotacoes();
-        atualizarDataHora();
-        setInterval(fetchCotacoes, 60000); // Atualiza as cotações a cada 60 segundos
-        setInterval(atualizarDataHora, 1000); // Atualiza data e hora a cada segundo
+            fetchCotacoes();
+            atualizarDataHora();
+            setInterval(fetchCotacoes, 60000);
+            setInterval(atualizarDataHora, 1000);
+        })();
     </script>
 </body>
 </html>
